Git_WGBH_QC/src/objects/Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>ContactLookup__c</fullName>
        <label>ContactLookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search Result</relationshipLabel>
        <relationshipName>Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>This field will be used in batch apex to update the record to reduce heap size.</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadLookup__c</fullName>
        <label>LeadLookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Search Result</relationshipLabel>
        <relationshipName>Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Search Request</label>
        <referenceTo>Search_Request__c</referenceTo>
        <relationshipLabel>Search Result</relationshipLabel>
        <relationshipName>Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>col10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>col10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>col11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>col11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>col12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>col12</label>
        <type>Checkbox</type>
    </fields>
    <label>Search Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>ID__c</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>col1__c</columns>
        <columns>col2__c</columns>
        <columns>col3__c</columns>
        <columns>col4__c</columns>
        <columns>col5__c</columns>
        <columns>col6__c</columns>
        <columns>col7__c</columns>
        <columns>col8__c</columns>
        <columns>col9__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000000000}</displayFormat>
        <label>Search Result#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>